<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genmsg</name>
  <version>0.5.16</version>
  <description>
    Standalone Python library for generating ROS message and service data structures for various languages.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/genmsg</url>
  <url type="bugtracker">https://github.com/ros/genmsg/issues</url>
  <url type="repository">https://github.com/ros/genmsg</url>

  <author>Troy Straszheim</author>
  <author>Morten Kjaergaard</author>
  <author>Ken Conley</author>
  <author>Dirk Thomas</author>

  <buildtool_depend>python3-setuptools</buildtool_depend>
  <exec_depend>python3-empy</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <build_type>ament_python</build_type>
    <architecture_independent/>
  </export>
</package>
